--- a/view/accommodation.html
+++ b/view/accommodation.html
@@ -18,27 +18,24 @@
 
     <header class="header" id="header-accommodation" >
         <div id="message"></div>
-         <select class="nameCountry" >       
-                            <option value="1">Serbia</option>
-                            <option value="2">Greece</option>
-                            <option value="3">Russia</option>
-                            <option value="4">USA</option>
-                            </select>
+        <form class="choose-city">
+            <select class="nameCountry" >       
+                <option value="1">Serbia</option>
+                <option value="2">Greece</option>
+                <option value="3">Russia</option>
+                <option value="4">USA</option>
+            </select>
                     <br> 
                     <br>
-                   <!-- <input list="nameCity" id="city" name="nameCity"><br>-->
-                    <select class="nameCity" >
-                                <option value="1">Belgrade</option>
-                                <option value="2">Thesaloniki</option>
-                                <option value="3">Chicago</option>
-                                <option value="4">Moscow</option>
-                            </select>
+            <select class="nameCity" >
+                <option value="1">Belgrade</option>
+                <option value="2">Thesaloniki</option>
+                <option value="3">Chicago</option>
+                <option value="4">Moscow</option>
+            </select>
                     <br>
-                    <button class="choose-destination-button">Select</button>
-
-            </form>
-        </div>-->
-        
+            <button class="choose-destination-button">Select</button>
+        </form>           
     </header>
 
     <!--TOPNAV-->
