--- a/view/life.html
+++ b/view/life.html
@@ -82,8 +82,8 @@
                 </a>
             </figure>
         </section>
-        <section>
-            <div style="display: none" id="transport">
+        <section class="section-second">
+            <div style="display: none" id="transport" >
                 <h1>Local Transport</h1>
                 General Information about Local transport:
                 <ul>
