--- a/view/life.html
+++ b/view/life.html
@@ -39,9 +39,9 @@
         <a href="./start.html">Start</a>
         <a class="active" href="#">Life ...</a>
         <a href="./accommodation.html">Accommodation</a>
-        <a href="enjoy.html">Enjoy ...</a>
-        <a href="feedback.html">Feedbacks</a>
-        <a id="providers" href="providers.html">Providers</a>
+        <a href="./enjoy.html">Enjoy ...</a>
+        <a href="./feedback.html">Feedbacks</a>
+        <a id="providers" href="./providers.html">Providers</a>
         <a href="javascript:void(0);" class="icon" onclick="nav()">
             <i class="fa fa-bars"></i>
         </a>
