--- a/view/accommodation.html
+++ b/view/accommodation.html
@@ -44,9 +44,9 @@
         <a  href="./start.html">Home</a>
         <a  href="./life.html">Life ...</a>
         <a class="active"  href="#">Accommodation</a>
-        <a  href="enjoy.html">Enjoy ...</a>
-        <a  href="feedback.html">Feedbacks</a>
-        <a id="providers" href="providers.html">Providers</a>
+        <a  href="./enjoy.html">Enjoy ...</a>
+        <a  href="./feedback.html">Feedbacks</a>
+        <a id="providers" href="./providers.html">Providers</a>
 
         <a href="javascript:void(0);" class="icon" onclick="nav()">
             <i class="fa fa-bars"></i>
