--- a/style/main.css
+++ b/style/main.css
@@ -55,7 +55,9 @@ html {
     width: 200px;
     margin: 5px;
 }
-
+input{
+    width: 100%;
+}
 button {
     padding: 10px;
     margin: 10px 10px 10px 0px;
@@ -192,6 +194,7 @@ button:hover {
     h2 {
         color: black;
         padding: 4%;
+        font-size: medium;
     }
 /***SECTION-SECOND**/
 .section-second{
@@ -243,8 +246,8 @@ color: darkcyan;
 }
 
 .provider-logo {
-height: 100px;
-width: 300px;
+height: 80px;
+width: 240px;
 }
 
 .left,
